--- a/css/styles.css
+++ b/css/styles.css
@@ -161,9 +161,10 @@ ul {
 }
 .backdrop {
         position: fixed;
+        top: 0;
         background-color: rgba(0, 0, 0, 0.2);
         width: 1600px;
-        height: 1024;
+        height: 1024px;
 }
 .backdrop.is-hidden {
         visibility: hidden;
@@ -171,6 +172,7 @@ ul {
         pointer-events: none;
 }
 .modal {
+        border-radius: 4px;
         background-color: #FFFFFF;
         width: 528px;
         height: 581px;
@@ -178,13 +180,17 @@ ul {
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
+
 }
 .btn-modal {
         width: 30px;
         height: 30px;
         position: absolute;
-        top: 0;
-        right: 0;
+        top: 8px;
+        right: 8px;
+        border-radius: 50%;
+        border-color: rgba(0, 0, 0, 0.1);
+        background-color: #FFFFFF;
 }
 
 /* < !-- Увага,
