--- a/css/styles.css
+++ b/css/styles.css
@@ -163,8 +163,8 @@ ul {
         position: fixed;
         top: 0;
         background-color: rgba(0, 0, 0, 0.2);
-        width: 1600px;
-        height: 1024px;
+        width: 100%;
+        height: 100%;
 }
 .backdrop.is-hidden {
         visibility: hidden;
