--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,9 @@ ul {
 .text-decor {
     text-decoration: none;
 }
+.img {
+        display: block;
+}
 /* Header */
 .header {
     background: #FFFFFF;
@@ -180,7 +183,7 @@ ul {
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .btn-modal {
         width: 30px;
@@ -250,6 +253,17 @@ ul {
 }
 .work-ul li:not(:last-child) {
         margin-right: 30px;
+}
+.work-li {
+        position: relative;
+}
+
+.work-h {
+        position: absolute;
+        bottom: 0;
+        width: 370px;
+        height: 70px;
+        background-color: rgba(47, 48, 58, 0.8);
 }
  /* < !-- Команда --> */
 .team {
