--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ ul {
 .text-decor {
     text-decoration: none;
 }
-.img {
+img {
         display: block;
 }
 /* Header */
@@ -165,9 +165,11 @@ ul {
 .backdrop {
         position: fixed;
         top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
         background-color: rgba(0, 0, 0, 0.2);
-        width: 100%;
-        height: 100%;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
         visibility: hidden;
@@ -194,6 +196,7 @@ ul {
         border-radius: 50%;
         border-color: rgba(0, 0, 0, 0.1);
         background-color: #FFFFFF;
+        cursor: pointer;
 }
 
 /* < !-- Увага,
@@ -261,9 +264,17 @@ ul {
 .work-h {
         position: absolute;
         bottom: 0;
-        width: 370px;
-        height: 70px;
+        width: 100%;
+        min-height: 70px;
         background-color: rgba(47, 48, 58, 0.8);
+        padding-top: 27px;
+        font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    display: block;
+    color: #FFFFFF;
+    text-align: center;
 }
  /* < !-- Команда --> */
 .team {
