--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,9 @@ img {
         color: #212121;
         padding-top: 32px;
         padding-bottom: 32px;
+        display: block;
+                transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                position: relative;
 }
 .link {
         font-weight: 500;
@@ -91,6 +94,17 @@ img {
 
 .link:hover .smarthone , .link:focus .smarthone {
         fill: #2196F3;
+}
+.current::after {
+        position: absolute;
+                left: 0;
+                bottom: 0;
+                content: '';
+                display: block;
+                width: 100%;
+                height: 4px;
+                background-color: #2196F3;
+                border-radius: 2px;
 }
 .envelope {
         margin-right: 10px;
