--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,9 @@ img {
 .link:hover .smarthone , .link:focus .smarthone {
         fill: #2196F3;
 }
+.current {
+        color: #2196F3;
+}
 .current::after {
         position: absolute;
                 left: 0;
@@ -526,6 +529,10 @@ margin-top: 0;
 .projects {
         display: none;
 }
+.cards-div {
+        position: relative;
+    overflow: hidden;
+}
 .cards {
         display: block;
         text-decoration: none;
@@ -550,4 +557,20 @@ margin-top: 0;
 }
 .img-item {
         display: block;
+}
+.cards-text {
+        display: block;
+        position: absolute;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    padding: 63px 24px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.6;
+    color: var(--footer-text-primary);
+    background-color: rgba(33, 150, 243, 0.9);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
 }
