--- a/css/styles.css
+++ b/css/styles.css
@@ -188,10 +188,13 @@ img {
         background-color: rgba(0, 0, 0, 0.2);
         transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop.is-hidden {
+.is-hidden {
         visibility: hidden;
         opacity: 0;
         pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+        transform: scale(2);
 }
 .modal {
         border-radius: 4px;
@@ -201,7 +204,8 @@ img {
         position: absolute;
         left: 50%;
         top: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%) scale(1);
+                transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .btn-modal {
@@ -529,19 +533,19 @@ margin-top: 0;
 .projects {
         display: none;
 }
-.cards-div {
-        position: relative;
-    overflow: hidden;
-}
+
 .cards {
         display: block;
         text-decoration: none;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.cards:hover {
+.cards:hover  {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+.cards:hover .cards-text {
+        transform: translateY(0);
+}
 .images {
-
         display: flex;
         flex-wrap: wrap;
 }
@@ -555,8 +559,9 @@ margin-top: 0;
 .images-link:nth-child(n+6) {
         margin-bottom: 0;
 }
-.img-item {
-        display: block;
+.div-overlay {
+        position: relative;
+        overflow: hidden;
 }
 .cards-text {
         display: block;
@@ -569,8 +574,8 @@ margin-top: 0;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.6;
-    color: var(--footer-text-primary);
+    color: #FFFFFF;
     background-color: rgba(33, 150, 243, 0.9);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(100%);
+ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
