--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ img {
         color: #757575;
         padding-top: 32px;
         padding-bottom: 32px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-li:hover, .link-li:focus {
@@ -333,6 +334,8 @@ img {
          display: flex;
          align-items: center;
          justify-content: center;
+         background-color: inherit;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-link:hover, .icon-link:focus {
         background-color: #2196F3;
@@ -341,6 +344,7 @@ img {
         fill: #AFB1B8;
         width: 20px;
         height: 20px;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-link:hover .icon-item,
 .icon-link:focus .icon-item {
@@ -389,6 +393,7 @@ img {
         display: flex;
         align-items: center;
         justify-content: center;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo:hover, .logo:focus {
@@ -404,6 +409,7 @@ img {
 
 .logo {
         fill: #AFB1B8;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Footer */
@@ -439,6 +445,7 @@ text-transform: uppercase;
          align-items: center;
          justify-content: center;
         background: rgba(255, 255, 255, 0.1);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-icons-a:hover, .footer-icons-a:focus {
         background-color: #2196F3;
@@ -455,20 +462,29 @@ text-transform: uppercase;
         margin-top: 0px;
         display: inline-block;
 }
+address {
+        font-style: normal;
+}
 .address {
         font-style: normal;
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
         color: #FFFFFF;
-        margin-top: 20px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.address:hover {
+        color: #2196F3;
+}
+.email-link {
+                margin-top: 20px;
+}
 .email {
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
         color: rgba(255, 255, 255, 0.6);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .email:hover, .email:focus {
     color: #2196F3;
@@ -495,6 +511,7 @@ margin-top: 0;
         padding: 6px 22px;
         background-color: #F5F4FA;
         border-radius: 4px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-ul li:not(:last-child) {
         margin-right: 8px;
